# fortran-corelib

./: .gitignore  CMakeLists.txt  README.md  TODO.md
examples/: CMakeLists.txt
examples/argparse/: CMakeLists.txt
examples/client/: CMakeLists.txt  client.f90
examples/io/: dir.f90
install/: config-version.cmake.in  config.cmake.in
src/: CMakeLists.txt  fcore.f90.in
src/argparse/: CMakeLists.txt  actions.f90  argument.F90  argument_data.F90
src/argparse/include/: argument_parse_array.f90  argument_parse_scalar.f90
src/client/: CMakeLists.txt
src/collections/: CMakeLists.txt  abc_mod.f90
src/common/: CMakeLists.txt  alloc_mod.f90  base_types.F90
src/common/include/: str_ctor_impl.F90  str_parse.f90
src/corelib/: CMakeLists.txt  config-version.cmake.in  config.cmake.in  corelib.f90  corelib.f90.in  version.f90.in
src/corelib/argparse/: CMakeLists.txt  actions.f90  argparse.f90  argument.F90  argument.f90  constants.f90  parser.F90  parser.f90  validators.f90
src/corelib/argparse/include/: argument_get_scalar.f90  argument_parse_array.f90  argument_parse_array_impl.f90  argument_parse_scalar.f90  validate_bounds_impl.f90
src/corelib/collections/: CMakeLists.txt  abc_mod.f90  collection_mod.f90  corelib_collections.f90  linked_list_mod.f90
src/corelib/common/: CMakeLists.txt  alloc_mod.f90  base_types.F90  casts.F90  casts.f90  common.f90  constants.f90  kinds.f90  status.f90
src/corelib/common/include/: str_array_1d.f90
src/corelib/datetime/: CMakeLists.txt  corelib_datetime.f90
src/corelib/io/: CMakeLists.txt  dir.f90  file.f90  io.f90  path.F90
src/corelib/logging/: CMakeLists.txt  corelib_logging.f90
src/corelib/strings/: CMakeLists.txt  corelib_string.f90  corelib_strings.f90  str_mod.F90  string.f90  string_mod.f90
src/corelib/strings/include/: str_parse.f90
src/corelib/testing/: CMakeLists.txt  assertion_mod.f90  corelib_testing.f90  foounit_mod.f90  test_case_mod.f90  test_suite_mod.f90
src/corelib/utils/: CMakeLists.txt  alloc_mod.f90  casts.f90  corelib_utils.f90  utils_mod.f90
src/datetime/: CMakeLists.txt  datetime.f90
src/examples/: CMakeLists.txt
src/examples/argparse/: CMakeLists.txt  argparse1.F90  argparse1.f90
src/examples/cmake-consumer/: CMakeLists.txt  consumer.f90
src/examples/io/: CMakeLists.txt
src/fcore/: CMakeLists.txt  fcore.f90.in
src/fcore/argparse/: CMakeLists.txt  actions.f90  argparse.f90  argument.F90  argument_data.F90  parser.F90  validators.F90  validators.f90
src/fcore/argparse/include/: argument_parse_array.f90  argument_parse_scalar.f90  parser_nonpoly_get_impl.F90  validate_bounds_impl.f90
src/fcore/collections/: CMakeLists.txt  abc_mod.f90  collections.f90  linked_list_mod.F90  linked_list_mod.f90
src/fcore/common/: CMakeLists.txt  base_types.F90  char.f90  common.f90  constants.f90  diagnostics.F90  input_validation.F90  kinds.f90  status_helpers.F90  strings.f90
src/fcore/common/include/: str_parse.f90
src/fcore/datetime/: CMakeLists.txt  datetime.f90
src/fcore/include/: fcore.h
src/fcore/io/: CMakeLists.txt  dir.f90  ini.F90  ini.f90  io.f90  path.F90
src/fcore/logging/: CMakeLists.txt  logging.f90
src/fcore/testing/: assertion_mod.f90  test_case_mod.f90  test_suite_mod.f90
src/include/: fcore.h
src/install/: compiler_test.f90  config-version.cmake.in  config.cmake.in
src/io/: CMakeLists.txt  dir.f90  file.f90  io_impl.c
src/testing/: CMakeLists.txt  test_suite_mod.f90  testing.f90
src/tests/: CMakeLists.txt
src/tests/argparse/: CMakeLists.txt  argparse.F90  argparse.f90  test_argparse.f90
src/tests/collections/: CMakeLists.txt
src/tests/common/: CMakeLists.txt  str.f90
src/tests/io/: CMakeLists.txt  ini.f90
src/tests/strings/: CMakeLists.txt  test_str.f90  test_strings.f90
tests/: CMakeLists.txt
tests/argparse/: CMakeLists.txt
tests/collections/: linked_list.f90
